--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "volta",
+  "name": "yantre",
   "description": "Yet another new tab replacement extension",
   "version": "0.0.1",
   "permissions": [
