change styling for options

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "yantre",
   "description": "Yet another new tab replacement extension",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "permissions": [
     "management",
     "storage",
@@ -11,5 +11,10 @@
   ],
   "chrome_url_overrides": {
     "newtab": "index.html"
+  },
+  "icons": { 
+    "16": "icon/icon16.png",
+    "48": "icon/icon48.png",
+    "128": "icon/icon128.png" 
   }
 }
